@@ -54,7 +54,7 @@
 ##
 ## and add the following directive to the HTTPS <Directory> section:
 ##
-## GridSiteMethods GET PUT DELETE
+## GridSiteMethods GET PUT DELETE MOVE
 ##
 ## If you wish to accept Globus GSI Proxies as well as full X.509 user
 ## certificates, set GridSiteGSIProxyLimit to the depth of proxy you
@@ -149,7 +149,7 @@ SSLOptions              +ExportCertData +StdEnvVars
  GridSiteAuth		on
  GridSiteDNlists	/etc/grid-security/dn-lists/
  GridSiteGSIProxyLimit	0
-# GridSiteMethods	GET PUT DELETE
+# GridSiteMethods	GET PUT DELETE MOVE
 </Directory>
  
 </VirtualHost>
