@@ -56,7 +56,7 @@
 ##
 ## and add the following directive to the HTTPS <Directory> section:
 ##
-## GridSiteMethods GET PUT DELETE
+## GridSiteMethods GET PUT DELETE MOVE
 ##
 ## If you wish to accept Globus GSI Proxies as well as full X.509 user
 ## certificates, set GridSiteGSIProxyLimit to the depth of proxy you
@@ -211,7 +211,7 @@ ScriptAlias /real-gridsite-admin.cgi /usr/sbin/real-gridsite-admin.cgi
 
  ## This directive allows authorized people to write/delete files 
  ## from non-browser clients - eg with htcp(1)
- GridSiteMethods	GET PUT DELETE
+ GridSiteMethods	GET PUT DELETE MOVE
 
  ## These directives (and the ScriptAlias above) allow authorized
  ## people to manage files, ACLs and DN Lists through their web
