@@ -1,3 +1,6 @@
+* Mon Oct 10 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
+- Add target_gname patch to gsexec from
+  Gerben Venekamp <venekamp@nikhef.nl>
 * Thu Oct 6 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
 - Fix session reuse with Shared-Memory SSL Session
   Cache bug #8856 in mod_gridsite.
